Posts within the last two hours show up as red.

--- a/client/views/posts/modules/post_title.html
+++ b/client/views/posts/modules/post_title.html
@@ -1,6 +1,6 @@
 <template name="postTitle">
    <div>
-    <a  class="postTitle" href="{{postLink}}" target="{{postTarget}}">{{title}}</a>
+    <a  class="postTitle {{TwoHours}}" href="{{postLink}}" target="{{postTarget}}">{{title}}</a>
     <br>
    </div>
   {{>collaborationTagList}}
