--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -2,11 +2,16 @@
   <div class="post vvv {{rankClass}} {{#if sticky}}sticky{{/if}} {{inactiveClass}}" id="{{_id}}">
     <div class="modules-group left-modules">
       <div class="inner">
-      {{#each leftPostModules}}
-        <div class="{{moduleClass}}">
-          {{> UI.dynamic template=getTemplate data=..}}
-        </div>
-      {{/each}}
+      <ul style="list-style-type: none;right: 50%;">
+          <li>
+          <div class="user-avatar">{{> avatar userId=userId shape="circle"}}</div>
+          </li>
+          {{#each leftPostModules}}
+              <li class="{{moduleClass}}">
+              {{> UI.dynamic template=getTemplate data=..}}
+              </li>
+          {{/each}}
+      </ul>
       </div>
     </div>
     <div class="modules-group center-modules">
