--- a/packages/telescope-post-files/client/views/files/files.html
+++ b/packages/telescope-post-files/client/views/files/files.html
@@ -1,4 +1,5 @@
 <template name="postedFiles">
+{{#if medbookfiles}}
    <div class="files-module grid-block">
    <label class="control-label">Files</label>
 
@@ -6,6 +7,7 @@
       {{> uploadedFile}}
    {{/each}}
   </div>
+{{/if}}
 </template>
 
 <template name="files">
