--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -1,5 +1,6 @@
 <template name="post_submit">
-  <div class="grid submit">
+  <div class="grid submit post_submit">
+    <h2>Post a Finding</h2>
     <form class="grid-block form-horizontal">
       <div class="control-group">
         <label class="control-label">{{_ "url"}}</label>
