--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -1,6 +1,7 @@
 <template name="post_submit-medbook">
-  <div class="grid submit">
+  <div class="grid submit post_submit">
     <form class="grid-block form-horizontal">
+    <h3 style="text-align:center; margin:15px!important;" >Post a Finding</h3>
 
         <div class="control-group">
             <label class="control-label">{{_ "Collaboration"}}</label>
