Begun to present posted svgs.

--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -87,6 +87,7 @@
         </div>
       {{/if}}
       -->
+      <div id="postedContent"></div>
       {{>files}}
       <div class="form-actions">
         <input type="submit" class="button" value="{{_ "Submit"}}" />
