--- a/packages/telescope-post-files/client/views/posts/post_page.html
+++ b/packages/telescope-post-files/client/views/posts/post_page.html
@@ -7,6 +7,8 @@
       {{> UI.dynamic template=post_body}}
     {{/if}}
 
+    <div id="svgHome" foo="{{frog}}"></div>
+
     {{> postedFiles}}
 
     {{> UI.dynamic template=comment_form}}
