--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -1,40 +1,57 @@
 <template name="post_submit">
   <div class="grid submit post_submit">
-    <h2>Post a Finding</h2>
     <form class="grid-block form-horizontal">
+    <h3 style="text-align:center; margin:15px!important;" >Post a Finding</h3>
+
+        <div class="control-group">
+            <label class="control-label">{{_ "Collaboration"}}</label>
+            <div class="controls">
+                {{>selectCollaborators}}
+
+            </div>
+        </div>
+
+
       <div class="control-group">
-        <label class="control-label">{{_ "url"}}</label>
-        <div class="controls"><input id="url" type="text" value="" /></div>
+        <label class="control-label">{{_ "Title"}}</label>
+        <div class="controls"><input id="title" type="text" value="" /><a href="#" class="get-title-link inline-link">{{_ "Suggest title"}}</a></div>
       </div>
       <div class="control-group">
-        <label class="control-label">{{_ "title"}}</label>
-        <div class="controls"><input id="title" type="text" value="" /><a href="#" class="get-title-link inline-link">{{_ "suggest_title"}}</a></div>
-      </div>
-      <div class="control-group">
-        <label class="control-label">{{_ "body"}}</label>
+        <label class="control-label">{{_ "Body"}}</label>
         <div class="controls" id="editor"><textarea id="body" value="" class="input-xlarge"></textarea></div>
       </div>
+
+        <div class="control-group">
+            <label class="control-label">{{_ "URL"}}</label>
+            <div class="controls"><input id="url" type="text" value="" /></div>
+        </div>
+
+
+<!--
       {{#if categoriesEnabled}}
       <div class="control-group">
-        <label class="control-label">{{_ "category"}}</label>
+        <label class="control-label">{{_ "Category"}}</label>
         <div class="controls">
           {{#each categories}}
           <label class="radio inline">
             <input id="category_{{_id}}" type="checkbox" value="{{_id}}" name="category" /> {{name}}
           </label>
           {{/each}}
+          <input id="new_category" type="text" placeHolder="New Category"/>
         </div>
       </div>
       {{/if}}
+      -->
+      <!--
       {{#if isAdmin}}
         <div class="control-group">
-          <label class="control-label">{{_ "sticky_"}}</label>
+          <label class="control-label">{{_ "Sticky?"}}</label>
           <div class="controls">
             <input type="checkbox" name="sticky" id="sticky" />
           </div>
         </div>
         <div class="control-group">
-          <label class="control-label">{{_ "user"}}</label>
+          <label class="control-label">{{_ "User"}}</label>
           <div class="controls">
             <select id="postUser">
               {{#each users}}
@@ -44,34 +61,38 @@
           </div>
         </div>
         <div class="control-group">
-          <label class="control-label">{{_ "status_"}}</label>
+          <label class="control-label">{{_ "Status"}}</label>
           <div class="controls">
             <label class="radio inline">
-              <input id="status_pending" type="radio" value="1" name="status"/> {{_ "pending"}}
+              <input id="status_pending" type="radio" value="1" name="status"/> {{_ "Pending"}}
             </label>
             <label class="radio inline">
-              <input id="status_approved" type="radio" value="2" name="status" checked /> {{_ "approved"}}
+              <input id="status_approved" type="radio" value="2" name="status" checked /> {{_ "Approved"}}
             </label>
             <label class="radio inline">  
-              <input id="status_rejected" type="radio" value="3" name="status"/> {{_ "rejected"}}
+              <input id="status_rejected" type="radio" value="3" name="status"/> {{_ "Rejected"}}
             </label>
           </div>
         </div>
         <div id="postedAt" class={{showPostedAt}}>
           <div class="control-group">
-            <label class="control-label post-form-date">{{_ "posted_date"}}</label>
+            <label class="control-label post-form-date">{{_ "Posted Date"}}</label>
             <div class="controls"><input id="postedAtDate" type="text" value="{{postedAtDate}}" /></div>
           </div>
           <div class="control-group">
-            <label class="control-label post-form-time">{{_ "posted_time"}}</label>
+            <label class="control-label post-form-time">{{_ "Posted Time"}}</label>
             <div class="controls"><input id="postedAtTime" type="text" value="{{postedAtTime}}" /></div>
           </div>
-          <p class="help-block">{{_ "leave_blank_to_post_at_current_time"}}</p>
+          <p class="help-block">Leave blank to post at current time.</p>
         </div>
       {{/if}}
+      -->
+      <div id="postedContent"></div>
+      {{>files}}
       <div class="form-actions">
-        <input type="submit" class="button" value="{{_ "submit"}}" />
+        <input type="submit" class="button" value="{{_ "Submit"}}" />
       </div>
+      <!-- {{> folder}} MedBook -->
     </form>
   </div>
 </template>
