--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -19,6 +19,7 @@
       <div class="control-group">
         <label class="control-label">{{_ "Body"}}</label>
         <div class="controls" id="editor"><textarea id="body" value="" class="input-xlarge"></textarea></div>
+        <input id="medbookfiles" value="" hidden>
       </div>
 
         <div class="control-group">
