Fixed settings bug Some settings and other formatting problems

--- a/packages/telescope-theme-base/lib/client/scss/specific/_users.scss
+++ b/packages/telescope-theme-base/lib/client/scss/specific/_users.scss
@@ -31,7 +31,14 @@
     float: left;
   }
   .sort{
-    float: right;
+    float: left;
   }
 
+}
+.template-users > .content-wrapper {
+    width: 2024 !important;
+}
+
+.template-users > .content-wrapper > .grid-module {
+    width: 2024 !important;
 }
