SVG now renders.

--- a/packages/telescope-post-files/client/views/posts/post_page.html
+++ b/packages/telescope-post-files/client/views/posts/post_page.html
@@ -7,7 +7,7 @@
       {{> UI.dynamic template=post_body}}
     {{/if}}
 
-    <div id="svgHome" foo="{{frog}}"></div>
+    <div id="svgHome">{{{this.svg}}}</div>
 
     {{> postedFiles}}
 
