--- a/webapp/packages/telescope-theme-base/lib/client/scss/includes/_mixins.scss
+++ b/webapp/packages/telescope-theme-base/lib/client/scss/includes/_mixins.scss
@@ -26,8 +26,8 @@ $grid-margin: 10px;
 /*================ MIXINS =================*/
 @mixin vcenter {
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  //top: 50%;
+  //transform: translateY(-50%);
 }
 @mixin animate($property: all){
   transition: $property, 300ms, 0ms, ease-out;
