--- a/webapp/packages/telescope-theme-hubble/lib/client/scss/partials/_mixins.scss
+++ b/webapp/packages/telescope-theme-hubble/lib/client/scss/partials/_mixins.scss
@@ -23,8 +23,8 @@
 /*================ MIXINS =================*/
 @mixin vcenter {
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  //top: 50%;
+  //transform: translateY(-50%);
 }
 @mixin animate($property: all){
   transition: $property, 300ms, 0ms, ease-out;
