--- a/webapp/packages/telescope-theme-medbook/lib/client/stylesheets/screen.css
+++ b/webapp/packages/telescope-theme-medbook/lib/client/stylesheets/screen.css
@@ -61,10 +61,10 @@ body{
   color: white;
 }
 
-.header {
+/*.header {
     background-color: white !important;
     color:  rgb(51, 51, 51);;
-}
+}*/
 
 .queryarea {
     padding: 5px 15px 5px 15px !important;
