--- a/webapp/client/views/nav/userMenu/user_menu.html
+++ b/webapp/client/views/nav/userMenu/user_menu.html
@@ -7,13 +7,13 @@
         <!--
           <li><a href="{{profileUrl}}">{{_ "profile"}}</a></li>
           -->
-          <li><a href="/account">{{_ "edit_account"}}</a></li> 
+          <li><a href="/account">{{_ "edit_account"}}</a></li>
           <li><a href="/sign-out">{{_ "sign_out"}}</a></li>
         </ul>
       </div>
     </div>
   {{else}}
-    <a class="account-link sign-in" href="/sign-in">{{_ "sign_in"}}</a>
-    <a class="account-link sign-up" href="/sign-up">{{_ "sign_up"}}</a>
+    <a id="signInLink" class="account-link sign-in" href="/sign-in">{{_ "sign_in"}}</a>
+    <a id="signUpLink" class="account-link sign-up" href="/sign-up">{{_ "sign_up"}}</a>
   {{/if}}
 </template>
