--- a/webapp/packages/telescope-theme-base/lib/client/scss/specific/_header.scss
+++ b/webapp/packages/telescope-theme-base/lib/client/scss/specific/_header.scss
@@ -11,7 +11,7 @@ $mobile-header-height: 50px;
     position: relative;
   }
   a, a:link, a:visited{
-    color: inherit;
+    //color: inherit;
     &.button{
       color: white;
     }
