--- a/webapp/client/views/posts/postPage/post_page.html
+++ b/webapp/client/views/posts/postPage/post_page.html
@@ -1,5 +1,5 @@
 <template name="post_page">
-  <div class="single-post grid">
+  <div id="singlePostPage" class="single-post grid">
     <div class="posts">
       {{> UI.dynamic template=post_item}}
     </div>
