--- a/webapp/client/views/comments/commentForm/comment_form.html
+++ b/webapp/client/views/comments/commentForm/comment_form.html
@@ -2,13 +2,13 @@
   {{#if canComment}}
     <div class="comment-new module">
       <form>
-        <div class="comment-field" id="editor">
-          <textarea id="comment" rows="3" autofocus="autofocus"></textarea>
+        <div class="comment-field">
+          <textarea id="commentTextarea" rows="3" autofocus="autofocus"></textarea>
         </div>
         <div class="comment-submit">
           <input type="submit" class="button" value="{{_ "add_comment"}}" title="(⌘+enter)" />
         </div>
       </form>
     </div>
-  {{/if}}  
+  {{/if}}
 </template>
