--- a/webapp/client/views/nav/submit_button.html
+++ b/webapp/client/views/nav/submit_button.html
@@ -1,5 +1,7 @@
+<!--
 <template name="submitButton">
   {{#if canPost}}
-    <a id="submit" class="submit button header-submodule" href="/submit">{{_ "post"}}</a>
+    <a id="newPostButton" class="submit button header-submodule" href="/submit">{{_ "post"}}</a>
   {{/if}}
 </template>
+-->
