--- a/webapp/packages/telescope-post-files/client/views/posts/post_page.html
+++ b/webapp/packages/telescope-post-files/client/views/posts/post_page.html
@@ -1,5 +1,5 @@
 <template name="post_page2">
-  <div class="single-post grid">
+  <div id="singlePostPage" class="single-post grid">
     <div class="posts">
       {{> UI.dynamic template=post_item}}
     </div>
@@ -7,7 +7,7 @@
       {{> UI.dynamic template=post_body}}
     {{/if}}
 
-    <div id="svgHome">{{{this.svg}}}</div>
+    <!--<div id="svgHome">{{{this.svg}}}</div>-->
 
     {{> postedFiles}}
 
