first attempt at using browser automation to create a collaboration

--- a/webapp/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/webapp/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -1,11 +1,13 @@
 <template name="collaborationGrid" xmlns="http://www.w3.org/1999/html">
-  <h3 class="collaborationGridTitle">Browse Collaborations</h3>
-  {{> collaborationAdd }}
-  <div class="collaboration posts list">
-    {{#each collaboration}}
-      {{> collaborationGridElement}}
-    {{/each}}
-  </div>
+  <article id="collaborationListPage">
+    <h3 class="collaborationGridTitle">Browse Collaborations</h3>
+    {{> collaborationAdd }}
+    <div class="collaboration posts list">
+      {{#each collaboration}}
+        {{> collaborationGridElement}}
+      {{/each}}
+    </div>    
+  </article>
 </template>
 
 
