--- a/webapp/client/views/nav/navbar/nav.html
+++ b/webapp/client/views/nav/navbar/nav.html
@@ -35,6 +35,9 @@
                 <li id="filterDailyPosts"><a href="#">Daily Posts</a></li>
               </ul>
           </li>
+          <li>
+            <a id="collaborationListButton" href="http://localhost:3000/collaborationList">Collaborations</a>
+          </li>
 
         {{/if}}
       </ul>
