--- a/webapp/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/webapp/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -1,32 +1,32 @@
 <template name="collaborationForm">
   {{#autoForm id="addCollaboration" doc=doc collection="Collaboration" validation="submit" type=type fields="isUnlisted,name,description,collaborators,requiresAdministratorApprovalToJoin,administrators,invitations" schema=Schemas.collaboration}}
       <fieldset>
-      {{> afQuickField name="name"}}
-      {{> afQuickField name="description"}}
+      {{> afQuickField id="nameInput" name="name"}}
+      {{> afQuickField id="descriptionInput" name="description"}}
       <small>
-      {{> afQuickField name="isUnlisted"  label-style="display:none;" type="boolean-radios" 
+      {{> afQuickField name="isUnlisted"  label-style="display:none;" type="boolean-radios"
            value=isUnlisted
-           trueLabel="This is an unlisted collaboration and will not appear in the directory to non-collaborators." 
+           trueLabel="This is an unlisted collaboration and will not appear in the directory to non-collaborators."
            falseLabel="This is a listed collaboration, only collaborators can see its contents."}}
       <br>
       </small>
 
-      {{> bump name="collaborators"  class="collaboratorListClass collaboratorInitWithSelf"  }}
+      {{> bump id="collaboratorsInput" name="collaborators"  class="collaboratorListClass collaboratorInitWithSelf"  }}
       {{#if afFieldIsInvalid name='collaborators'}}
           <span class="help-block">{{afFieldMessage name=''}}</span>
       {{/if}}
-      {{> bump name="administrators" class="collaboratorListClass collaboratorInitWithSelf" }}
+      {{> bump id="administratorsInput" name="administrators" class="collaboratorListClass collaboratorInitWithSelf" }}
 
 
-      {{> afQuickField name="requiresAdministratorApprovalToJoin" label-style="display:none;" type="boolean-radios" 
+      {{> afQuickField name="requiresAdministratorApprovalToJoin" label-style="display:none;" type="boolean-radios"
            value=requiresAdministratorApprovalToJoin
-           falseLabel="Users may add themselves" 
+           falseLabel="Users may add themselves"
            trueLabel="Users require administrator approval"}}
 
-      {{> bump name="invitations"  class="collaboratorListClass"   }}
+      {{> bump id="invitationsInput" name="invitations"  class="collaboratorListClass"   }}
 
-      <button type="submit" class="btn btn-primary"> Submit </button>
-      <button type="button" onclick='$(".collapsed").hide()' class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
+      <button id="submitCollaborationButton" type="submit" class="btn btn-primary"> Submit </button>
+      <button id="cancelAddCollaborationButton" type="button" onclick='$(".collapsed").hide()' class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
       {{#if doc}}
           <button data-_id={{doc._id}} data-name={{doc.name}} type="button" class="removeCollaboration btn btn-primary" style="background-color:red!important;"> Delete Collaboration </button>
       {{/if}}
@@ -35,7 +35,7 @@
 </template>
 
 <template name="collaborationAdd">
-    <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
+    <div id="addCollaborationButton" onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
         <h3 class="short" style="color:white;text-align:center; margin:5px; padding:0; font-size:26px;" >Add Collaboration</h3>
         <div class="collapsed " style="display:none;">
             {{>collaborationForm type="insert"}}
@@ -66,7 +66,7 @@
 
    <!--
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
-       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
+       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update"
             fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
        <button type="button"   onclick='$(".collapsed").hide()' class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
        <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
@@ -76,7 +76,7 @@
 
 <template name="collaborationReview">
    <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >
-   The following individuals would like to join {{name}} 
+   The following individuals would like to join {{name}}
    Collaboration</h3>
    <div class="basicPanel">
    <form>
@@ -84,8 +84,8 @@
     {{#each requests}}
     <tr>
         <th> {{this}} </th>
-        <th> <label class="radio-inline"><input type="radio" class="underReview" name="{{this}}" checked>Under review</label> </th> 
-        <th> <label class="radio-inline"><input type="radio" class="notApproved" name="{{this}}">Not Appoved</label> </th> 
+        <th> <label class="radio-inline"><input type="radio" class="underReview" name="{{this}}" checked>Under review</label> </th>
+        <th> <label class="radio-inline"><input type="radio" class="notApproved" name="{{this}}">Not Appoved</label> </th>
         <th> <label class="radio-inline"><input type="radio" class="approved" name="{{this}}">Approved</label> </th>
     </tr>
     {{/each }}
@@ -97,7 +97,7 @@
    {{>collaborationForm doc=this type="update"}}
 
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
-       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
+       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update"
             fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
        <button type="button" onclick='$(".collapsed").hide()'  class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
        <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
