removed hardcoded url to localhost; relaxing post.status result checking

--- a/webapp/client/views/nav/navbar/nav.html
+++ b/webapp/client/views/nav/navbar/nav.html
@@ -36,7 +36,7 @@
               </ul>
           </li>
           <li>
-            <a id="collaborationListButton" href="http://localhost:3000/collaborationList">Collaborations</a>
+            <a id="collaborationListButton" href="/collaborationList">Collaborations</a>
           </li>
 
         {{/if}}
