moved path to /lists/collaborations; added Router.go() trigger; logging whats going on with postId

--- a/webapp/packages/telescope-collaboration/lib/client/views/collaboration_menu.html
+++ b/webapp/packages/telescope-collaboration/lib/client/views/collaboration_menu.html
@@ -4,7 +4,7 @@
       <a class="collaboration dropdown-top-level" href="/">{{_ "Collaborations"}}</a>
       <div class="dropdown-menu">
         <ul role="menu" aria-labelledby="dLabel">
-            <li><a class="dropdown-sub-level" href="/collaborationList/">List Collaborations</a></li>
+            <li><a class="dropdown-sub-level" href="/list/collaborations/">List Collaborations</a></li>
             <li><a class="dropdown-sub-level" href="/collaboration/">See all Posts from all Collaborations</a></li>
 
           {{# each collaboration}}
