Used wrong link.

--- a/packages/telescope-email/lib/server/templates/emailNewPost.handlebars
+++ b/packages/telescope-email/lib/server/templates/emailNewPost.handlebars
@@ -2,7 +2,7 @@
 <a href="{{profileUrl}}">{{postAuthorName}}</a>
 has created a new post:
 {{#if url}}
-  <a href="{{linkUrl}}" class="action-link">{{postTitle}}}</a>
+  <a href="{{postUrl}}" class="action-link">{{postTitle}}}</a>
 {{else}}
   {{postTitle}}}
 {{/if}}
