resolves #14 - removes add collab UI for anon users
adds new route addCollaboration & moves the add collaboration
UI from the collaborationList route. anon users get redirected
to signin page.

--- a/webapp/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/webapp/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -1,6 +1,12 @@
 <template name="collaborationGrid" xmlns="http://www.w3.org/1999/html">
   <h3 class="collaborationGridTitle">Browse Collaborations</h3>
-  {{> collaborationAdd }}
+
+  {{#if currentUser}}
+		{{> collaborationAdd }}
+	{{else}}
+		{{> loginToAddCollaboration }}
+	{{/if}}
+
   <div class="collaboration posts list">
     {{#each collaboration}}
       {{> collaborationGridElement}}
