--- a/webapp/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/webapp/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -34,14 +34,25 @@
   {{/autoForm}}
 </template>
 
+<!-- Large button: add a collaboration -->
 <template name="collaborationAdd">
-    <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
-        <h3 class="short" style="color:white;text-align:center; margin:5px; padding:0; font-size:26px;" >Add Collaboration</h3>
-        <div class="collapsed " style="display:none;">
-            {{>collaborationForm type="insert"}}
-       </div>
-    </div>
+	<a href="/addCollaboration">
+			<div class="collaboration-item" style="cursor:pointer;">
+					<h3 class="short" style="color:white;text-align:center; margin:5px; padding:0; font-size:26px;" >Add Collaboration</h3>
+			</div>
+	</a>
 </template>
+
+<!-- Large button: login first to add a collaboration -->
+<template name="loginToAddCollaboration">
+	<a href="/sign-in">
+			<div class="collaboration-item" style="cursor:pointer;">
+					<h3 class="short" style="color:white;text-align:center; margin:5px; padding:0; font-size:20px;" >Login or register to add a collaboration</h3>
+			</div>	
+	</a>
+</template>
+
+
 
 <template name="bump">
   <div class="panel panel-default">
