Adds simple mailto: button in sharing dialog
Per issue #16.
Envelope icon is from: https://design.google.com/icons/#ic_mail_outline

--- a/webapp/packages/telescope-theme-hubble/lib/client/scss/modules/_share.scss
+++ b/webapp/packages/telescope-theme-hubble/lib/client/scss/modules/_share.scss
@@ -118,3 +118,9 @@ a.mt-share-inline-square-sm {
 .mt-pinterest {
   background-color: rgb(204, 33, 39);
 }
+.mt-email:hover {
+  background-color: rgb(180, 180, 180);
+}
+.mt-email {
+  background-color: rgb(160, 160, 160);
+}
